--- a/.templates/index.html
+++ b/.templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>__TITLE__</title>
+        <title>__SITE_TITLE__</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="__DESCRIPTION__">
 
